Added LED class, various tweaks